  * Remove mesos-tidy and mesos-website builder.
  * Remove python dependencies and move the "new" mesos-cli to it's on repository (https://github.com/AVENTER-UG/mesos-cli).
  * Remove the old mesos-cli.
  * Update zookeeper client to version 3.8.2.
  * Update libboost to version 1.83.0.
  * Change to c++14
  * Update jquery to version 3.7.1.


Release Notes - Clusterd - Version 1.11.0-0.3.0
-----------------------------------------------
This release contains the following highlights:

  * Docker Containerizer now supports CNI.
  * Add CNI support for the Docker Executor.
  * Fix random SlaveRecoveryTest.PingTimeoutDuringRecovery test failure.
  * Fix Blkio isolator. handled missing CFQ statistics.
  * Fix mesos-tidy build with new gRPC version.
  * Update grpc to version 1.11.1
  * Add s390x support


Release Notes - Mesos - Version 1.11.0
-------------------------------------------
This release contains the following highlights:

  * Mesos Containerizer now supports using pre-provisioned external CSI storage
    volumes by means of the new `volume/csi` isolator; the latter significantly
    extends the range of compatible 3rd party CSI plugins compared to the
    already existing SLRP-based solution (MESOS-10141).

  * The Scheduler API adds an interface allowing frameworks to put constraints
    on agent attributes in resource offers to help "picky" frameworks
    significantly reduce scheduling latency when close to being out of quota
    (MESOS-10161).

  * The CMake build becomes usable for deploying in production (MESOS-898).

Additional API Changes:

  * **Breaking change** Deprecated authentication credential text format support.

Unresolved Critical Issues:
  * [MESOS-10194] - Mesos master failure "Check failed: 'get_(role)' Must be SOME"
  * [MESOS-10186] - Segmentation fault while running mesos in SSL mode
  * [MESOS-10146] - Removing task from slave when framework is disconnected causes master to crash