@@ -16,6 +16,7 @@ This master branch contains the following changes:
   * Update libboost to version 1.83.0.
   * Change to c++14
   * Update jquery to version 3.7.1.
+  * Change docker networking. If no docker network and no docker net attribute was given, add default noworking.
 
 
 Release Notes - Clusterd - Version 1.11.0-0.3.0
